src/snapshots/ozen__panel__tests__transcription_off_hides_pause.snap
---
source: src/panel.rs
expression: "controls(\"stopped\", true, 2)"
---
{
  "pause": {
    "enabled": false,
    "hidden": true
  },
  "queued": 2,
  "start": {
    "enabled": true,
    "title": "Start"
  },
  "stop": {
    "enabled": false
  }
}
